test/tests/compiler/18_structures/invalid_types/extra_credit/other_features/prefix_decr_struct.plx
#  Can't apply prefix or postfix ++/-- to structures
type struc s(    i: i32    )

pub fn main(none) i32 {
    my_struct: struc s = $(true)
    --my_struct
    return 0
}
